[tool.poetry]
name = "crypto-bot"
version = "0.1.0"
description = "Bot Telegram pour les actus crypto"
authors = ["Clément"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "13.15"
feedparser = "*"
apscheduler = "*"
pytz = "*"
telegram = "^0.0.1"
requests = "^2.32.4"
flask = "^3.1.1"
